Tue Feb  6 11:58:57 2001  David Taylor  <taylor@redhat.com>

	* valops.c (value_cast): If casting a scalar to a pointer, do not
 	issue a message about truncation unless it exceeds the length of
 	an address, not the length of a pointer.  This is because what the
 	user gives us is an address, not a pointer, and we will ultimately
 	convert it (via ADDRESS_TO_POINTER) to a pointer, not truncate it
 	to a pointer.  This allows things like "print *(int *)0x01000234"
 	to work without generating a misleading message on a target having
 	two byte pointers and four byte addresses.

2001-02-05  Christopher Faylor  <cgf@cygnus.com>

	* win32-nat.c: Change PTR to void * throughout.

2001-02-05  J.T. Conklin  <jtc@redback.com>

	* signals.h: Removed.
	* event-top.c (#include <signal.h>): Changed from signals.h.
	* inflow.c: Likewise.
	* mac-xdep.c: Likewise.
	* ser-pipe.c: Likewise.
	* ser-tcp.c: Likewise.
	* standalone.c: Likewise.
	* top.c: Likewise.
	* utils.c: Likewise.
	* Makefile.in: Removed signals.h from dependencies.

2001-02-05  Christopher Faylor  <cgf@cygnus.com>

	Change suggested by Dean Luick <luick@cray.com>
	* inferior.h (step_over_calls_kind): Remove trailing comma from
	last enum element.
	(step_over_calls): Declare as extern rather than global.

2001-02-05  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	* sh-tdep.c: Update copyright.
	(sh_extract_return_value): Rewrite.
	(sh3e_sh4_extract_return_value): New function.
	(sh_gdbarch_init): Initialize gdbarch_extract-return_value to new
 	version of the function for sh3e and sh4 CPUs.

2001-02-05  Michael Chastain  <chastain@redhat.com>

	* hppah-nat.c (child_xfer_memory): Add parameter 'struct mem_attrib *'
	to conform with interface change.

2001-02-04  Eli Zaretskii  <eliz@is.elta.co.il>

	* config/djgpp/fnchange.lst: Tweak to make consistent with the
	new files.

	* config/djgpp/djconfig.sh: Use explicit absolute file name when
	invoking `find'.
